[gd_scene load_steps=10 format=4 uid="uid://ckckpn0m1bvqc"]

[ext_resource type="Script" path="res://Main_scene/level_select.gd" id="1_rxe3g"]
[ext_resource type="TileSet" uid="uid://bd7sk1o30q7b3" path="res://tileMap/Test_Tile_Set_1.tres" id="1_tdlxs"]
[ext_resource type="Texture2D" uid="uid://dsuhfc1iygokd" path="res://Sprites/Background/awesomeCavePixelArt.png" id="2_5p8p7"]
[ext_resource type="PackedScene" uid="uid://cpnut0p826n1" path="res://Enemy/Mob_3/mob_3.tscn" id="3_50okx"]
[ext_resource type="PackedScene" uid="uid://bacy4xvcl8htm" path="res://Enemy/Mob_2/mob_2.tscn" id="4_whj6h"]
[ext_resource type="PackedScene" uid="uid://bn2vf1nchwcwl" path="res://Enemy/Mob_1/mob_1.tscn" id="5_3e7hi"]
[ext_resource type="FontFile" uid="uid://df6uneptrln2l" path="res://Fonts/Minecraft.ttf" id="6_ipwla"]
[ext_resource type="Texture2D" uid="uid://b13kx563ytejh" path="res://Sprites/UI/Back.png" id="7_3gnfy"]
[ext_resource type="Texture2D" uid="uid://cqjog0mesnlpe" path="res://Sprites/UI/BackHover.png" id="8_20eef"]

[node name="Level_select" type="Node2D"]
texture_filter = 1
script = ExtResource("1_rxe3g")

[node name="TileMap" type="TileMap" parent="."]
tile_set = ExtResource("1_tdlxs")
format = 2

[node name="Ground" type="TileMapLayer" parent="TileMap"]
tile_map_data = PackedByteArray("AAARAAoAAAABAAIAAAAQAAoAAAAGAAUAAAAPAAoAAAAGAAYAAAAOAAoAAAABAAIAAAANAAoAAAABAAIAAAAMAAoAAAABAAIAAAALAAoAAAABAAIAAAAKAAoAAAABAAIAAAAJAAoAAAABAAIAAAAIAAoAAAABAAIAAAAHAAoAAAABAAIAAAAGAAoAAAABAAIAAAAFAAoAAAABAAIAAAAEAAoAAAAAAAIAAAD8/woAAAACAAIAAAD7/woAAAABAAIAAAD6/woAAAAHAAYAAAD5/woAAAAHAAUAAAD4/woAAAABAAIAAAD3/woAAAABAAIAAAD2/woAAAABAAIAAAD1/woAAAAHAAYAAAD0/woAAAABAAIAAADz/woAAAABAAIAAADy/woAAAABAAIAAADx/woAAAABAAIAAADw/woAAAABAAIAAADv/woAAAABAAIAAADu/woAAAABAAIAAADt/wkAAAABAAIAAADt/wgAAAABAAIAAADt/wcAAAABAAIAAADt/wYAAAABAAIAAADt/wUAAAABAAIAAADt/wQAAAABAAIAAADt/wMAAAAHAAYAAADt/wIAAAABAAIAAADt/wEAAAABAAIAAADt/wAAAAABAAIAAADt////AAABAAIAAADt//7/AAACAAIAAADt//3/AAACAAIAAADt//z/AAACAAIAAADt//v/AAABAAIAAADt//r/AAABAAIAAADt//n/AAABAAIAAADt//j/AAAGAAUAAADt//f/AAABAAIAAADt//b/AAABAAIAAADt//X/AAAHAAYAAAASAAoAAAABAAIAAAASAAkAAAABAAIAAAASAAgAAAAGAAUAAAASAAcAAAABAAIAAAASAAYAAAABAAIAAAASAAUAAAABAAIAAAASAAQAAAAHAAUAAAASAAMAAAABAAIAAAASAAIAAAAGAAYAAAASAAEAAAABAAIAAAASAAAAAAABAAIAAAASAP//AAABAAIAAAASAP7/AAAAAAIAAAASAP3/AAAAAAIAAAASAPz/AAAAAAIAAAASAPv/AAABAAIAAAASAPr/AAABAAIAAAASAPn/AAABAAIAAAASAPj/AAABAAIAAAASAPf/AAABAAIAAAASAPb/AAABAAIAAAASAPX/AAABAAIAAAASAPT/AAAEAAIAAAARAPX/AAAAAAIAAAARAPT/AAAEAAEAAAAPAPX/AAACAAIAAAAPAPT/AAAGAAEAAAAOAPX/AAABAAIAAAAOAPT/AAAFAAEAAAANAPX/AAABAAIAAAANAPT/AAAFAAEAAAAMAPX/AAABAAIAAAAMAPT/AAAFAAEAAAALAPX/AAABAAIAAAALAPT/AAAEAAIAAAAKAPX/AAABAAIAAAAKAPT/AAAEAAIAAAAJAPX/AAABAAIAAAAJAPT/AAAFAAEAAAAIAPX/AAAGAAYAAAAIAPT/AAAFAAEAAAAHAPX/AAABAAIAAAAHAPT/AAAEAAIAAAAGAPX/AAABAAIAAAAGAPT/AAAEAAIAAAAFAPX/AAABAAIAAAAFAPT/AAAEAAIAAAAEAPX/AAABAAIAAAAEAPT/AAAFAAEAAAADAPX/AAABAAIAAAADAPT/AAAEAAIAAAACAPX/AAABAAIAAAACAPT/AAAEAAIAAAABAPX/AAABAAIAAAABAPT/AAAFAAEAAAAAAPX/AAABAAIAAAAAAPT/AAAFAAEAAAD///X/AAABAAIAAAD///T/AAAFAAEAAAD+//X/AAABAAIAAAD+//T/AAAEAAIAAAD9//X/AAABAAIAAAD9//T/AAAFAAEAAAD8//X/AAABAAIAAAD8//T/AAAEAAIAAAD7//X/AAABAAIAAAD7//T/AAAEAAIAAAD6//X/AAABAAIAAAD6//T/AAAFAAEAAAD5//X/AAABAAIAAAD5//T/AAAFAAEAAAD4//X/AAABAAIAAAD4//T/AAAEAAIAAAD3//X/AAABAAIAAAD3//T/AAAFAAEAAAD2//X/AAAGAAYAAAD2//T/AAAEAAIAAAD1//X/AAABAAIAAAD1//T/AAAEAAIAAAD0//X/AAAHAAUAAAD0//T/AAAFAAEAAADz//X/AAAGAAYAAADz//T/AAAEAAIAAADy//X/AAAHAAYAAADy//T/AAAEAAIAAADx//X/AAABAAIAAADx//T/AAAEAAIAAADw//X/AAABAAIAAADw//T/AAAFAAEAAADv//X/AAABAAIAAADv//T/AAAEAAIAAADu//X/AAABAAIAAADu//T/AAAEAAIAAADt//T/AAAFAAEAAADs/wsAAAABAAIAAADs/woAAAABAAIAAADs/wkAAAABAAIAAADs/wgAAAABAAIAAADs/wcAAAABAAIAAADs/wYAAAABAAIAAADs/wUAAAAHAAUAAADs/wQAAAABAAIAAADs/wMAAAAHAAUAAADs/wIAAAAHAAYAAADs/wEAAAABAAIAAADs/wAAAAABAAIAAADs////AAABAAIAAADs//7/AAABAAIAAADs//3/AAABAAIAAADs//z/AAABAAIAAADs//v/AAABAAIAAADs//r/AAABAAIAAADs//n/AAABAAIAAADs//j/AAABAAIAAADs//f/AAABAAIAAADs//b/AAABAAIAAADs//X/AAABAAIAAADs//T/AAAEAAIAAADr/wkAAAAGAAUAAADr/wgAAAABAAIAAADr/wcAAAABAAIAAADr/wYAAAABAAIAAADr/wUAAAABAAIAAADr/wQAAAABAAIAAADr/wMAAAABAAIAAADr/wIAAAABAAIAAADr/wEAAAABAAIAAADr/wAAAAAHAAYAAADr////AAABAAIAAADr//7/AAABAAIAAADr//3/AAAHAAYAAADr//z/AAABAAIAAADr//v/AAABAAIAAADr//r/AAABAAIAAADr//n/AAABAAIAAADr//j/AAAGAAYAAADr//f/AAABAAIAAADr//b/AAABAAIAAADr//X/AAABAAIAAADr//T/AAAEAAIAAADq/wkAAAAAAAIAAADq/wgAAAAAAAIAAADq/wcAAAAAAAIAAADq/wYAAAAAAAIAAADq/wUAAAAAAAIAAADq/wQAAAAAAAIAAADq/wMAAAAAAAIAAADq/wIAAAAAAAIAAADq/wEAAAAAAAIAAADq/wAAAAAAAAIAAADq////AAAAAAIAAADq//7/AAAAAAIAAADq//3/AAAAAAIAAADq//z/AAAAAAIAAADq//v/AAAAAAIAAADq//r/AAAAAAIAAADq//n/AAAAAAIAAADq//j/AAAAAAIAAADq//f/AAAAAAIAAADq//b/AAAAAAIAAADq//X/AAAAAAIAAADq//T/BAAAAAAAAADv/wwAAAAGAAMAAADv/wsAAAABAAIAAADu/wwAAAAIAAMAAADu/wsAAAAHAAUAAADt/wwAAAAGAAMAAADt/wsAAAABAAIAAADt/woAAAABAAIAAADs/wwAAAAGAAMAAADr/wwAAAAIAAMAAADr/wsAAAABAAIAAADr/woAAAABAAIAAADq/wwAAAAFAAMAAADq/wsAAAAAAAIAAADq/woAAAAAAAIAAAASAAwAAAAGAAMAAAASAAsAAAABAAIAAAARAAwAAAAIAAMAAAARAAsAAAABAAIAAAAQAAwAAAAGAAMAAAAQAAsAAAAHAAUAAAAPAAwAAAAIAAMAAAAPAAsAAAABAAIAAAAOAAwAAAAGAAMAAAAOAAsAAAABAAIAAAANAAwAAAAIAAMAAAANAAsAAAABAAIAAAAMAAwAAAAGAAMAAAAMAAsAAAABAAIAAAALAAwAAAAGAAMAAAALAAsAAAABAAIAAAAKAAwAAAAIAAMAAAAKAAsAAAABAAIAAAAJAAwAAAAGAAMAAAAJAAsAAAABAAIAAAAIAAwAAAAGAAMAAAAIAAsAAAAHAAYAAAAHAAwAAAAGAAMAAAAHAAsAAAABAAIAAAAGAAwAAAAGAAMAAAAGAAsAAAABAAIAAAAFAAwAAAAGAAMAAAAFAAsAAAABAAIAAAAEAAwAAAAGAAMAAAAEAAsAAAAFAAIAAAADAAwAAAAIAAMAAAADAAsAAAAFAAEAAAACAAwAAAAGAAMAAAACAAsAAAAFAAEAAAABAAwAAAAIAAMAAAABAAsAAAAFAAEAAAAAAAwAAAAGAAMAAAAAAAsAAAAFAAEAAAD//wwAAAAGAAMAAAD//wsAAAAFAAEAAAD+/wwAAAAIAAMAAAD+/wsAAAAFAAEAAAD9/wwAAAAGAAMAAAD9/wsAAAAEAAIAAAD8/wwAAAAGAAMAAAD8/wsAAAAGAAIAAAD7/wwAAAAGAAMAAAD7/wsAAAAGAAUAAAD6/wwAAAAIAAMAAAD6/wsAAAABAAIAAAD5/wwAAAAGAAMAAAD5/wsAAAAGAAYAAAD4/wwAAAAGAAMAAAD4/wsAAAABAAIAAAD3/wwAAAAGAAMAAAD3/wsAAAAHAAYAAAD2/wwAAAAIAAMAAAD2/wsAAAAGAAYAAAD1/wwAAAAIAAMAAAD1/wsAAAAHAAYAAAD0/wwAAAAIAAMAAAD0/wsAAAABAAIAAADz/wwAAAAGAAMAAADz/wsAAAAGAAYAAADy/wwAAAAGAAMAAADy/wsAAAABAAIAAADx/wwAAAAIAAMAAADx/wsAAAABAAIAAADw/wwAAAAGAAMAAADw/wsAAAABAAIAAAAUAAsAAAACAAIAAAAUAAoAAAACAAIAAAAUAAkAAAACAAIAAAAUAAgAAAACAAIAAAAUAAcAAAACAAIAAAAUAAYAAAACAAIAAAAUAAUAAAACAAIAAAAUAAQAAAACAAIAAAAUAAMAAAACAAIAAAAUAAIAAAACAAIAAAAUAAEAAAACAAIAAAAUAAAAAAACAAIAAAAUAP//AAACAAIAAAAUAP7/AAACAAIAAAAUAP3/AAACAAIAAAAUAPz/AAACAAIAAAAUAPv/AAACAAIAAAAUAPr/AAACAAIAAAAUAPn/AAACAAIAAAAUAPj/AAACAAIAAAAUAPf/AAACAAIAAAAUAPb/AAACAAIAAAAUAPX/AAACAAIAAAAUAPT/AAAGAAEAAAATAAsAAAABAAIAAAATAAoAAAABAAIAAAATAAkAAAABAAIAAAATAAgAAAABAAIAAAATAAcAAAAGAAYAAAATAAYAAAAGAAYAAAATAAUAAAABAAIAAAATAAQAAAABAAIAAAATAAMAAAABAAIAAAATAAIAAAABAAIAAAATAAEAAAABAAIAAAATAAAAAAABAAIAAAATAP//AAABAAIAAAATAP7/AAAHAAUAAAATAP3/AAABAAIAAAATAPz/AAABAAIAAAATAPv/AAAGAAYAAAATAPr/AAABAAIAAAATAPn/AAAHAAYAAAATAPj/AAAHAAUAAAATAPf/AAABAAIAAAATAPb/AAABAAIAAAATAPX/AAABAAIAAAATAPT/AAAEAAIAAAATAAwAAAAGAAMAAAAUAAwABAABAAEAAAARAAkAAAAFAAIAAAAQAAkAAAAFAAEAAAAPAAkAAAAEAAIAAAAOAAkAAAAEAAIAAAANAAkAAAAEAAIAAAAMAAkAAAAFAAEAAAALAAkAAAAGAAIAAAAKAAkAAAABAAIAAAAJAAkAAAABAAIAAAAIAAkAAAABAAIAAAAHAAkAAAABAAIAAAAGAAkAAAABAAIAAAAFAAkAAAABAAIAAAAEAAkAAAAAAAIAAAD8/wkAAAACAAIAAAD7/wkAAAAFAAIAAAD6/wkAAAAFAAEAAAD5/wkAAAAEAAIAAAD4/wkAAAAEAAIAAAD3/wkAAAAFAAEAAAD2/wkAAAAFAAEAAAD1/wkAAAAFAAEAAAD0/wkAAAAEAAIAAADz/wkAAAAFAAEAAADy/wkAAAAEAAIAAADx/wkAAAAFAAEAAADw/wkAAAAFAAEAAADv/wkAAAAEAAIAAADu/wkAAAAGAAIAAAARAPb/AAAAAAIAAAAPAPb/AAACAAIAAAAOAPb/AAABAAIAAAANAPb/AAAGAAUAAAAMAPb/AAABAAIAAAALAPb/AAABAAIAAAAKAPb/AAABAAIAAAAJAPb/AAAHAAUAAAAIAPb/AAABAAIAAAAHAPb/AAABAAIAAAAGAPb/AAAJAAMAAAAFAPb/AAAIAAMAAAAEAPb/AAAIAAMAAAADAPb/AAAIAAMAAAACAPb/AAAIAAMAAAABAPb/AAAGAAMAAAAAAPb/AAAGAAMAAAD///b/AAAIAAMAAAD+//b/AAAIAAMAAAD9//b/AAAIAAMAAAD8//b/AAAGAAMAAAD7//b/AAAIAAMAAAD6//b/AAAGAAMAAAD5//b/AAAGAAMAAAD4//b/AAAIAAMAAAD3//b/AAAIAAMAAAD2//b/AAAGAAMAAAD1//b/AAAGAAMAAAD0//b/AAAIAAMAAADz//b/AAAIAAMAAADy//b/AAAGAAMAAADx//b/AAAIAAMAAADw//b/AAAGAAMAAADv//b/AAAGAAMAAADu//b/AAAAAAQAAAARAAQAAAAFAAIAAAAQAAQAAAAEAAIAAAAPAAQAAAAEAAIAAAAOAAQAAAAEAAIAAAANAAQAAAAFAAEAAAAMAAQAAAAGAAIAAAALAAQAAAABAAIAAAAKAAQAAAAFAAIAAAAJAAQAAAAEAAIAAAAIAAQAAAAEAAIAAAAHAAQAAAAFAAEAAAAGAAQAAAAEAAIAAAAFAAQAAAAEAAIAAAAEAAQAAAAEAAIAAAADAAQAAAAEAAIAAAACAAQAAAAEAAIAAAABAAQAAAAFAAEAAAAAAAQAAAAFAAEAAAD//wQAAAAFAAEAAAD+/wQAAAAFAAEAAAD9/wQAAAAFAAEAAAD8/wQAAAAFAAEAAAD7/wQAAAAEAAIAAAD6/wQAAAAFAAEAAAD5/wQAAAAFAAEAAAD4/wQAAAAGAAIAAAD3/wQAAAABAAIAAAD2/wQAAAAFAAIAAAD1/wQAAAAFAAEAAAD0/wQAAAAEAAIAAADz/wQAAAAFAAEAAADy/wQAAAAFAAEAAADx/wQAAAAFAAEAAADw/wQAAAADAAIAAADu/wQAAAACAAIAAADu//r/AAAGAAIAAADu//v/AAAAAAQAAAARAAUAAAAJAAMAAAAQAAUAAAAGAAMAAAAPAAUAAAAGAAMAAAAOAAUAAAAIAAMAAAANAAUAAAAGAAMAAAAMAAUAAAAGAAMAAAALAAUAAAAIAAMAAAAKAAUAAAAGAAMAAAAJAAUAAAAIAAMAAAAIAAUAAAAGAAMAAAAHAAUAAAAIAAMAAAAGAAUAAAAIAAMAAAAFAAUAAAAGAAMAAAAEAAUAAAAIAAMAAAADAAUAAAAGAAMAAAACAAUAAAAGAAMAAAABAAUAAAAGAAMAAAAAAAUAAAAIAAMAAAD//wUAAAAGAAMAAAD+/wUAAAAGAAMAAAD9/wUAAAAIAAMAAAD8/wUAAAAIAAMAAAD7/wUAAAAIAAMAAAD6/wUAAAAIAAMAAAD5/wUAAAAIAAMAAAD4/wUAAAAAAAQAAAD3/wUAAAABAAIAAAD2/wUAAAABAAIAAAD1/wUAAAAHAAUAAAD0/wUAAAABAAIAAADz/wUAAAABAAIAAADy/wUAAAABAAIAAADx/wUAAAABAAIAAADw/wUAAAAAAAIAAADu/wUAAAACAAIAAAARAP//AAAFAAIAAAAPAP//AAAEAAIAAAAOAP//AAAFAAEAAAANAP//AAAFAAEAAAAMAP//AAAEAAIAAAALAP//AAAEAAIAAAAKAP//AAAFAAEAAAAJAP//AAAFAAEAAAAIAP//AAAEAAIAAAAHAP//AAAEAAIAAAAGAP//AAAEAAIAAAAFAP//AAAEAAIAAAAEAP//AAAEAAIAAAADAP//AAAFAAEAAAACAP//AAAEAAIAAAABAP//AAAEAAIAAAAAAP//AAAEAAIAAAD/////AAAEAAIAAAD+////AAAEAAIAAAD9////AAAEAAIAAAD8////AAAFAAEAAAD7////AAAFAAEAAAD6////AAAFAAEAAAD5////AAAFAAEAAAD4////AAAEAAIAAAD3////AAAEAAIAAAD2////AAAFAAEAAAD1////AAAEAAIAAAD0////AAAFAAEAAADz////AAAEAAIAAADy////AAAFAAEAAADx////AAAFAAEAAADw////AAAEAAIAAADv////AAAFAAEAAADu////AAAFAAIAAAARAAAAAAAJAAMAAAAPAAAAAAAGAAMAAAAOAAAAAAAGAAMAAAANAAAAAAAGAAMAAAAMAAAAAAAIAAMAAAALAAAAAAAGAAMAAAAKAAAAAAAGAAMAAAAJAAAAAAAGAAMAAAAIAAAAAAAGAAMAAAAHAAAAAAAIAAMAAAAGAAAAAAAIAAMAAAAFAAAAAAAGAAMAAAAEAAAAAAAIAAMAAAADAAAAAAAGAAMAAAACAAAAAAAGAAMAAAABAAAAAAAIAAMAAAAAAAAAAAAGAAMAAAD//wAAAAAIAAMAAAD+/wAAAAAIAAMAAAD9/wAAAAAGAAMAAAD8/wAAAAAGAAMAAAD7/wAAAAAIAAMAAAD6/wAAAAAGAAMAAAD5/wAAAAAIAAMAAAD4/wAAAAAGAAMAAAD3/wAAAAAGAAMAAAD2/wAAAAAGAAMAAAD1/wAAAAAIAAMAAAD0/wAAAAAGAAMAAADz/wAAAAAIAAMAAADy/wAAAAAGAAMAAADx/wAAAAAGAAMAAADw/wAAAAAGAAMAAADv/wAAAAAIAAMAAADu/wAAAAAAAAQAAAARAPv/AAAAAAQAAAARAPr/AAAFAAIAAAAQAPv/AAAIAAMAAAAQAPr/AAAEAAIAAAAPAPv/AAAGAAMAAAAPAPr/AAAFAAEAAAAOAPv/AAAIAAMAAAAOAPr/AAAFAAEAAAANAPv/AAAGAAMAAAANAPr/AAAFAAEAAAAMAPv/AAAGAAMAAAAMAPr/AAAFAAEAAAALAPv/AAAGAAMAAAALAPr/AAAFAAEAAAAKAPv/AAAIAAMAAAAKAPr/AAAFAAEAAAAJAPv/AAAIAAMAAAAJAPr/AAAFAAEAAAAIAPv/AAAGAAMAAAAIAPr/AAAEAAIAAAAHAPv/AAAGAAMAAAAHAPr/AAAFAAEAAAAGAPv/AAAIAAMAAAAGAPr/AAAFAAEAAAAFAPv/AAAGAAMAAAAFAPr/AAAFAAEAAAAEAPv/AAAIAAMAAAAEAPr/AAAEAAIAAAADAPv/AAAGAAMAAAADAPr/AAAGAAIAAAACAPv/AAAIAAMAAAACAPr/AAABAAIAAAABAPv/AAAGAAMAAAABAPr/AAABAAIAAAAAAPv/AAAIAAMAAAAAAPr/AAABAAIAAAD///v/AAAGAAMAAAD///r/AAABAAIAAAD+//v/AAAGAAMAAAD+//r/AAABAAIAAAD9//v/AAAIAAMAAAD9//r/AAAHAAYAAAD8//v/AAAGAAMAAAD8//r/AAAFAAIAAAD7//v/AAAGAAMAAAD7//r/AAAEAAIAAAD6//v/AAAIAAMAAAD6//r/AAAFAAEAAAD5//v/AAAGAAMAAAD5//r/AAAEAAIAAAD4//v/AAAIAAMAAAD4//r/AAAFAAEAAAD3//v/AAAGAAMAAAD3//r/AAAFAAEAAAD2//v/AAAGAAMAAAD2//r/AAAGAAIAAAD1//v/AAAIAAMAAAD1//r/AAABAAIAAAD0//v/AAAGAAMAAAD0//r/AAABAAIAAADz//v/AAAIAAMAAADz//r/AAABAAIAAADy//v/AAAIAAMAAADy//r/AAABAAIAAADx//v/AAAIAAMAAADx//r/AAAFAAIAAADw//v/BAAAAAEAAADw//r/AAADAAIAAADu/wgAAAACAAIAAADu/wcAAAACAAIAAADu/wYAAAACAAIAAADu/wIAAAACAAIAAADu/wEAAAACAAIAAADu//n/AAACAAIAAADu//j/AAACAAIAAADu//f/AAACAAIAAAARAPf/AAAAAAIAAAARAPj/AAAAAAIAAAARAPn/AAAAAAIAAAARAAEAAAAAAAIAAAARAAIAAAAAAAIAAAARAAMAAAAAAAIAAAARAAYAAAAAAAIAAAARAAcAAAAAAAIAAAARAAgAAAAAAAIAAADu/wMAAAACAAIAAAD4/wMAAAAGAAEAAAD3/wMAAAAFAAEAAAD2/wMABAAAAAAAAAAMAAMABAABAAAAAAALAAMAAAAEAAIAAAAKAAMAAAAEAAEAAAD4/wYAAAAHAAMAAAD3/wYAAAAIAAMAAAD2/wYAAAAIAAMAAAD1/wYAAAAIAAMAAAD0/wYAAAAIAAMAAADz/wYAAAAIAAMAAADy/wYAAAAIAAMAAADx/wYAAAAGAAMAAADw/wYAAAAFAAMAAAAEAAgAAAAEAAEAAAAFAAgAAAAFAAEAAAAGAAgAAAAFAAEAAAAHAAgAAAAEAAIAAAAIAAgAAAAFAAEAAAAJAAgAAAAFAAEAAAAKAAgAAAAFAAEAAAD7/wgAAAADAAIAAAD8/wgAAAAGAAEAAAALAAgABAABAAAAAADv/wQAAAABAAgAAADv/wUAAAAGAAcAAADv/wYAAAAGAAcAAADv/wcAAAAGAAcAAADv/wgAAAAGAAcAAAAQAP//AAABAAgAAAAQAAAAAAAGAAcAAAAQAAEAAAAGAAcAAAAQAAIAAAAGAAcAAAAQAAMAAAAGAAcAAAABAAkAAQAAAAAABgACAAkAAQAAAAAABgADAAkAAQAAAAAABgADAAoAAAAHAAgAAAACAAoAAAAFAAgAAAABAAoAAAAFAAgAAAAAAAoAAAAHAAgAAAD//woAAAAHAAgAAAD+/woAAAAHAAgAAAD9/woAAAAHAAgAAAAAAAkAAQAAAAAABgD//wkAAQAAAAAABgD+/wkAAQAAAAAABgD9/wkAAQAAAAAABgDv//7/AAAGAAcAAADv//3/AAAGAAcAAADv//z/AAAGAAcAAADv//v/AAAGAAcAAADv//r/AAABAAgAAADx//n/BAAAAAAAAADy//n/AAAEAAIAAADz//n/AAAEAAIAAAD0//n/AAAFAAEAAAD1//n/AAAEAAIAAAD2//n/AAAGAAEAAAD8//n/AAADAAIAAAD9//n/AAAEAAIAAAD+//n/AAAEAAIAAAD///n/AAAFAAEAAAAAAPn/AAAFAAEAAAABAPn/AAAFAAEAAAACAPn/AAAEAAIAAAADAPn/BAABAAAAAAAGAPf/AAAFAAMAAAAHAPf/AAAGAAMAAAAIAPf/AAAIAAMAAAAJAPf/AAAIAAMAAAAKAPf/AAAGAAMAAAALAPf/AAAIAAMAAAAMAPf/AAAIAAMAAAANAPf/AAAGAAMAAAAPAPf/AAAHAAMAAAAOAPf/AAAIAAMAAAAQAPn/AAAGAAcAAAAQAPj/AAAGAAcAAAAQAPf/AAAGAAcAAAAQAPb/AAAGAAcAAAAQAPX/AAAGAAcAAAAQAPT/AAAGAAcAAAA=")
tile_set = ExtResource("1_tdlxs")

[node name="Foreground" type="TileMapLayer" parent="TileMap"]
z_index = 2
tile_map_data = PackedByteArray("AAAOAP7/AgADAAAAAAD0//7/AgAAAAUAAAD1//7/AgAEAAQAAAD2//7/AgAEAAQAAAD3//7/AgAFAAQAAAADAP7/AgACAAAAAAD7//7/AgACAAAAAADy//3/AgACAAAAAAD9//7/AAACAAAAAAD4//3/AAAHAAAAAAD///7/AAAHAAAAAADw//7/AAAHAAAAAADz//3/AAAAAAEAAAAGAP3/AAACAAAAAADu/wAAAwAAAAAAAADv/wAAAwABAAAAAADw/wAAAwADAAAAAADv/wEAAwABAAEAAADu/wEAAwAAAAEAAADu/wIAAwAAAAEAAADv/wIAAwADAAMAAADv/wMAAwADAAAAAADu/wMAAwAAAAIAAADu/wQAAwAAAAMAAAD9/wEAAwABAAEAAAD9/wMAAwABAAEAAAD9/wIAAwABAAIAAAD8/wIAAwAAAAEAAAD8/wMAAwAAAAEAAAD8/wEAAwAAAAIAAAD9/wQAAwABAAMAAAD+/wQAAwABAAMAAAD8/wQAAwAAAAMAAAD//wQAAwADAAMAAAD8/wAAAwACAAAAAAD6/wAAAwABAAAAAAD7/wAAAwABAAAAAAD9/wAAAwADAAAAAAD5/wAAAwAAAAAAAAAGAAEAAwADAAMAAAAFAAEAAwAAAAMAAAAFAAAAAwABAAAAAAAEAAAAAwAAAAAAAAAPAAQAAwADAAMAAAAOAAQAAwAAAAMAAAAHAAQAAwABAAMAAAAGAAQAAwABAAMAAAAIAAQAAwADAAMAAAAFAAQAAwAAAAMAAAD3/wcAAAAEAAcAAAD2/wcAAAAEAAcAAAD1/wcAAAACAAcAAAD0/wcAAAADAAcAAADz/wcAAAAEAAcAAADy/wcAAAACAAcAAADx/wcAAAADAAcAAADw/wcAAAACAAgAAAD4/wcAAAADAAgAAADv/wQAAwADAAMAAAAQAAgAAAAGAAAAAAAOAAgAAAACAAAAAAAGAAcAAAACAAAAAAAIAAcAAAAHAAAAAADy/wgAAAAGAAAAAADz/wgAAAAFAAAAAAD2/wgAAAACAAAAAAAEAAcAAAAAAAEAAAAPAP7/AgACAAAAAAAKAP7/AgAAAAAAAAD7//n/AAAGAAgAAAD6//n/AAAGAAgAAAD5//n/AAAFAAgAAAD4//n/AAAGAAgAAAD3//n/AAAHAAgAAAAOAPj/AAAEAAcAAAANAPj/AAAEAAcAAAAMAPj/AAACAAcAAAALAPj/AAACAAcAAAAKAPj/AAADAAcAAAAJAPj/AAADAAcAAAAIAPj/AAACAAcAAAAHAPj/AAACAAcAAAAGAPj/AAACAAgAAAAPAPj/AAADAAgAAADy//j/AAACAAAAAADz//j/AAAHAAAAAAD2//j/AAABAAAAAAD9//j/AAAAAAAAAAD+//j/AAADAAAAAAACAPj/AAACAAAAAAD///j/AAAFAAAAAAAKAPn/AAAHAAAAAAAMAPn/AAAHAAAAAAABAPj/AAAIAAAAAAD8//j/AAAAAAEAAAA=")
tile_set = ExtResource("1_tdlxs")

[node name="Ice" type="TileMapLayer" parent="TileMap"]
tile_map_data = PackedByteArray("AAAPAAAAAgAAAAMAAAAOAAAAAgAFAAIAAAANAAAAAgAFAAIAAAAMAAAAAgAFAAIAAAALAAAAAgAFAAIAAAAKAAAAAgAFAAIAAAAJAAAAAgAFAAIAAAAIAAAAAgAFAAIAAAAHAAAAAgAFAAIAAAAGAAAAAgAFAAIAAAAFAAAAAgAFAAIAAAAEAAAAAgAFAAIAAAADAAAAAgAFAAIAAAACAAAAAgAFAAIAAAABAAAAAgAFAAIAAAAAAAAAAgAFAAIAAAD//wAAAgAFAAIAAAD+/wAAAgAFAAIAAAD9/wAAAgAFAAIAAAD8/wAAAgAFAAIAAAD7/wAAAgAFAAIAAAD6/wAAAgAFAAIAAAD5/wAAAgAFAAIAAAD4/wAAAgAFAAIAAAD3/wAAAgAFAAIAAAD2/wAAAgAFAAIAAAD1/wAAAgAFAAIAAAD0/wAAAgAFAAIAAADz/wAAAgAFAAIAAADy/wAAAgAFAAIAAADx/wAAAgAFAAIAAADw/wAAAgAFAAIAAADv/wAAAgAFAAIAAADu/wAAAgAFAAMAAADu////AgACAAUAAADv////AgAFAAAAAADw////AgAFAAAAAADx////AgADAAUAAADy////AgADAAEAAADz////AgACAAUAAAD0////AgAFAAAAAAD1////AgAFAAAAAAD2////AgAFAAAAAAD3////AgAFAAAAAAD4////AgADAAUAAAD5////AgADAAEAAAD6////AgACAAUAAAD7////AgAFAAAAAAD8////AgAFAAAAAAD9////AgAFAAAAAAD+////AgAFAAAAAAD/////AgAFAAAAAAAAAP//AgAFAAAAAAABAP//AgAFAAAAAAACAP//AgAFAAAAAAADAP//AgAFAAAAAAAEAP//AgADAAUAAAAFAP//AgADAAEAAAAGAP//AgADAAEAAAAHAP//AgAEAAEAAAAIAP//AgABAAEAAAAJAP//AgABAAEAAAAKAP//AgABAAEAAAALAP//AgABAAEAAAAMAP//AgABAAEAAAANAP//AgABAAEAAAAOAP//AgAEAAAAAAAPAP//AgAAAAEAAAARAP//AgACAAEAAAARAAAAAgACAAEAAADu/wEAAgAEAAEAAADt/wEAAgADAAEAAADs/wEAAgADAAEAAADs/wAAAgADAAEAAADt/wAAAgADAAEAAADt////AgADAAUAAADt/wIAAgAFAAIAAADu/wIABQABAAEAAADs////AgAFAAAAAADr////AgAFAAAAAADq////BQAAAAAAAADq/wAAAgACAAEAAADq/wEAAgACAAEAAADr/wEAAgADAAEAAADr/wIAAgAFAAIAAADs/wIAAgAFAAIAAADq/wIAAgAEAAIAAADr/wAAAgADAAEAAADu//7/AgAEAAEAAADu//3/AgAEAAEAAADt//3/AgACAAEAAADt//7/AgACAAEAAADt//z/AgADAAEAAAARAPz/AgACAAEAAAARAPv/AgAAAAQAAAAQAPv/AgAFAAIAAAAPAPv/AgAFAAIAAAAOAPv/AgAFAAIAAAANAPv/AgAFAAIAAAAMAPv/AgAFAAIAAAALAPv/AgAFAAIAAAAKAPv/AgAFAAIAAAAJAPv/AgAFAAIAAAAIAPv/AgAFAAIAAAAHAPv/AgAFAAIAAAAGAPv/AgAFAAIAAAAFAPv/AgAFAAIAAAAEAPv/AgAFAAIAAAADAPv/AgAFAAIAAAACAPv/AgAFAAIAAAABAPv/AgAFAAIAAAAAAPv/AgAFAAIAAAD///v/AgAFAAIAAAD+//v/AgAFAAIAAAD9//v/AgAFAAIAAAD8//v/AgAFAAIAAAD7//v/AgAFAAIAAAD6//v/AgAFAAIAAAD5//v/AgAFAAIAAAD4//v/AgAFAAIAAAD3//v/AgAFAAIAAAD2//v/AgAFAAIAAAD1//v/AgAFAAIAAAARAP3/AgACAAEAAAASAPz/AgAEAAEAAAASAP3/AgAEAAEAAAASAP7/AgAEAAEAAAASAP//AgAEAAEAAAARAP7/AgACAAEAAAASAAAAAgAEAAEAAADu//z/AgAEAAEAAAD0//v/AgAFAAIAAADz//v/AgAFAAIAAADy//v/AgAFAAIAAADx//v/AgAFAAIAAADw//v/AgAEAAIAAADu//v/AgAEAAEAAADt//v/AgADAAEAAAASAPv/BQABAAAAAAASAAEAAgAEAAEAAAARAAEABQAAAAEAAAASAAIAAgAEAAIAAADs//v/AgADAAEAAADr//v/AgACAAEAAADr//z/BQAAAAEAAADs//z/AgAFAAIAAADt//r/AgAFAAAAAADs//r/AgAFAAAAAADr//r/AgAEAAAAAADu//r/BQABAAAAAAD4//7/AgAEAAAAAAD5//7/AgAFAAAAAAD6//7/BQABAAAAAADz//7/AgAAAAEAAADy//7/AgAFAAAAAADx//7/BQAAAAAAAAAFAP7/AgAFAAAAAAAGAP7/AgAFAAAAAAAHAP7/BQABAAAAAAAEAP7/AgAEAAAAAAA=")
tile_set = ExtResource("1_tdlxs")

[node name="Background" type="TileMapLayer" parent="TileMap"]
z_index = -2
tile_set = ExtResource("1_tdlxs")

[node name="Camera2D" type="Camera2D" parent="."]
zoom = Vector2(1.985, 1.985)

[node name="ParallaxBackground" type="ParallaxBackground" parent="."]

[node name="AwesomeCavePixelArt" type="Sprite2D" parent="ParallaxBackground"]
position = Vector2(590, 321)
texture = ExtResource("2_5p8p7")

[node name="Mobs" type="Node2D" parent="."]

[node name="Mob_3" parent="Mobs" instance=ExtResource("3_50okx")]
position = Vector2(43, -34)

[node name="Mob_4" parent="Mobs" instance=ExtResource("3_50okx")]
position = Vector2(-104, -51)

[node name="Mob_2" parent="Mobs" instance=ExtResource("4_whj6h")]
position = Vector2(-250, -33)

[node name="Mob_1" parent="Mobs" instance=ExtResource("5_3e7hi")]
position = Vector2(-225, 54)

[node name="Mob_5" parent="Mobs" instance=ExtResource("5_3e7hi")]
position = Vector2(-65, 53)

[node name="Mob_6" parent="Mobs" instance=ExtResource("5_3e7hi")]
position = Vector2(243, 55)

[node name="Mob_7" parent="Mobs" instance=ExtResource("5_3e7hi")]
position = Vector2(127, 53)

[node name="Mob_8" parent="Mobs" instance=ExtResource("4_whj6h")]
position = Vector2(211, -30)

[node name="Mob_9" parent="Mobs" instance=ExtResource("5_3e7hi")]
position = Vector2(-31, 133)

[node name="Mob_10" parent="Mobs" instance=ExtResource("5_3e7hi")]
position = Vector2(-108, 132)

[node name="Mob_11" parent="Mobs" instance=ExtResource("4_whj6h")]
position = Vector2(255, 129)

[node name="Mob_12" parent="Mobs" instance=ExtResource("4_whj6h")]
position = Vector2(-14, -124)

[node name="Mob_13" parent="Mobs" instance=ExtResource("5_3e7hi")]
position = Vector2(-184, -126)

[node name="Mob_14" parent="Mobs" instance=ExtResource("3_50okx")]
position = Vector2(75, -114)

[node name="Buttons" type="Control" parent="."]
z_index = -2
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="Level_1" type="Button" parent="Buttons"]
layout_mode = 0
offset_left = -289.0
offset_top = 75.0
offset_right = 288.0
offset_bottom = 173.0
theme_override_fonts/font = ExtResource("6_ipwla")
text = "Level 1"

[node name="Level_2" type="Button" parent="Buttons"]
layout_mode = 0
offset_left = -289.0
offset_top = 4.0
offset_right = 288.0
offset_bottom = 82.0
theme_override_fonts/font = ExtResource("6_ipwla")
text = "Level 2"

[node name="Level_3" type="Button" parent="Buttons"]
layout_mode = 0
offset_left = -289.0
offset_top = -78.0
offset_right = 288.0
theme_override_fonts/font = ExtResource("6_ipwla")
text = "Level 3"

[node name="Level_4" type="Button" parent="Buttons"]
layout_mode = 0
offset_left = -289.0
offset_top = -167.0
offset_right = 288.0
offset_bottom = -89.0
theme_override_fonts/font = ExtResource("6_ipwla")
text = "Level 4"

[node name="Back" type="TextureButton" parent="Buttons"]
z_index = 4
layout_mode = 0
offset_left = -284.0
offset_top = -158.0
offset_right = -242.0
offset_bottom = -116.0
texture_normal = ExtResource("7_3gnfy")
texture_hover = ExtResource("8_20eef")

[connection signal="pressed" from="Buttons/Level_1" to="." method="_on_level_1_pressed"]
[connection signal="pressed" from="Buttons/Level_2" to="." method="_on_level_2_pressed"]
[connection signal="pressed" from="Buttons/Level_3" to="." method="_on_level_3_pressed"]
[connection signal="pressed" from="Buttons/Level_4" to="." method="_on_level_4_pressed"]
[connection signal="pressed" from="Buttons/Back" to="." method="_on_back_pressed"]
